<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/view_status_card_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/status_title"
        android:textColor="@color/col_sensor_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_status_card_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textColor="@color/col_sensor_text"
        android:textSize="14sp"
        tools:text="@string/status_idle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_status_card_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/server_connection"
        android:textColor="@color/col_sensor_text"
        app:icon="@drawable/ic_baseline_refresh_24"
        app:iconGravity="end" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/view_status_card_pb"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:indicatorColor="@color/purple_500" />

</LinearLayout>
